--- a/WindowExplorer/Sources/Controllers/InfoViewController/Views/InfoItemView.xib
+++ b/WindowExplorer/Sources/Controllers/InfoViewController/Views/InfoItemView.xib
@@ -18,6 +18,7 @@
                 <outlet property="stackView" destination="CQY-jO-dcr" id="tbM-4f-tLa"/>
                 <outlet property="titleLabel" destination="mjG-G9-Km3" id="ZDF-BG-TM8"/>
                 <outlet property="view" destination="c22-O7-iKe" id="l5U-yM-Ga5"/>
+                <outlet property="windowDragArea" destination="4R8-hS-CIt" id="MGT-hO-aRN"/>
             </connections>
         </customObject>
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
