--- a/WindowExplorer/Sources/Controllers/MasterViewController/Master.storyboard
+++ b/WindowExplorer/Sources/Controllers/MasterViewController/Master.storyboard
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.Cocoa.Storyboard.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" initialViewController="aqO-32-87F">
     <dependencies>
-        <deployment identifier="macosx"/>
         <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="14313.18"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -14,8 +13,11 @@
                         <rect key="frame" x="0.0" y="0.0" width="735" height="396"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <subviews>
+                            <visualEffectView appearanceType="inheritedVibrantLight" blendingMode="behindWindow" material="ultraDark" state="active" translatesAutoresizingMaskIntoConstraints="NO" id="eqa-er-qxf">
+                                <rect key="frame" x="0.0" y="0.0" width="735" height="396"/>
+                            </visualEffectView>
                             <popUpButton verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="mSd-7i-Rsz">
-                                <rect key="frame" x="266" y="204" width="205" height="26"/>
+                                <rect key="frame" x="266" y="204" width="205" height="25"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="200" id="yRA-Yt-2lM"/>
                                 </constraints>
@@ -118,7 +120,7 @@
                                 </constraints>
                             </customView>
                             <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="o2b-t2-z8m">
-                                <rect key="frame" x="268" y="163" width="200" height="25"/>
+                                <rect key="frame" x="268" y="164" width="200" height="23"/>
                                 <buttonCell key="cell" type="roundTextured" title="Apply" bezelStyle="texturedRounded" alignment="center" state="on" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="smM-v4-yy2">
                                     <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                                     <font key="font" metaFont="system"/>
@@ -174,11 +176,11 @@
                                         </collectionView>
                                     </subviews>
                                 </clipView>
-                                <scroller key="horizontalScroller" verticalHuggingPriority="750" horizontal="YES" id="Cnw-1I-fHq">
+                                <scroller key="horizontalScroller" wantsLayer="YES" verticalHuggingPriority="750" horizontal="YES" id="Cnw-1I-fHq">
                                     <rect key="frame" x="0.0" y="129" width="735" height="16"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                 </scroller>
-                                <scroller key="verticalScroller" verticalHuggingPriority="750" horizontal="NO" id="m1n-Hi-Mtn">
+                                <scroller key="verticalScroller" wantsLayer="YES" verticalHuggingPriority="750" horizontal="NO" id="m1n-Hi-Mtn">
                                     <rect key="frame" x="719" y="0.0" width="16" height="145"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                 </scroller>
@@ -216,6 +218,8 @@
                             <constraint firstItem="3F4-Er-svo" firstAttribute="top" secondItem="Wc8-TP-M8l" secondAttribute="top" id="BHZ-o8-3Ew"/>
                             <constraint firstItem="4nz-vb-GsC" firstAttribute="height" secondItem="ymn-JJ-20y" secondAttribute="height" id="BXO-Wk-5cq"/>
                             <constraint firstItem="HgU-cY-X4N" firstAttribute="height" secondItem="ymn-JJ-20y" secondAttribute="height" id="Bi7-Ya-fF7"/>
+                            <constraint firstAttribute="trailing" secondItem="eqa-er-qxf" secondAttribute="trailing" id="Bnc-ya-DIO"/>
+                            <constraint firstAttribute="bottom" secondItem="eqa-er-qxf" secondAttribute="bottom" id="DAD-Dd-r08"/>
                             <constraint firstItem="4nz-vb-GsC" firstAttribute="width" secondItem="ymn-JJ-20y" secondAttribute="width" id="GAR-qo-zcl"/>
                             <constraint firstItem="HgU-cY-X4N" firstAttribute="leading" secondItem="4nz-vb-GsC" secondAttribute="trailing" id="GiR-9L-Saj"/>
                             <constraint firstAttribute="bottom" secondItem="1Sz-r8-D2k" secondAttribute="bottom" constant="12" id="JcS-BY-2Z1"/>
@@ -234,7 +238,9 @@
                             <constraint firstItem="HgU-cY-X4N" firstAttribute="width" secondItem="ymn-JJ-20y" secondAttribute="width" id="lSF-c0-NP7"/>
                             <constraint firstItem="4zV-vO-Fm1" firstAttribute="leading" secondItem="Wc8-TP-M8l" secondAttribute="leading" id="rlj-un-jpu"/>
                             <constraint firstItem="mSd-7i-Rsz" firstAttribute="centerX" secondItem="Wc8-TP-M8l" secondAttribute="centerX" id="t7g-JL-gW5"/>
+                            <constraint firstItem="eqa-er-qxf" firstAttribute="top" secondItem="Wc8-TP-M8l" secondAttribute="top" id="tjw-Af-W4p"/>
                             <constraint firstAttribute="trailing" secondItem="4zV-vO-Fm1" secondAttribute="trailing" id="ww6-rA-p7m"/>
+                            <constraint firstItem="eqa-er-qxf" firstAttribute="leading" secondItem="Wc8-TP-M8l" secondAttribute="leading" id="x7c-Ap-YNr"/>
                             <constraint firstItem="ymn-JJ-20y" firstAttribute="width" secondItem="Wc8-TP-M8l" secondAttribute="width" multiplier="1:3" id="xLY-Md-4KW"/>
                         </constraints>
                     </view>
